# PIP_LONGSIZE

./: PIP_integer_calculator.py  PIP_longsize.py  README.md  __init__.py  pyproject.toml  requirements.txt  workflow.json
.github/workflows/: publish.yml
