[project]
name = "comfyui_pip_longsize"
description = "A ComfyUI custom node for processing and generating images with extended dimensions, supporting extra-wide or extra-tall aspect ratios."
version = "1.0.0"
license = {text = "MIT"}
dependencies = ["numpy", "pillow"]

[project.urls]
Repository = "https://github.com/chenpipi0807/PIP_LONGSIZE"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "PIP LongSize"
Icon = ""
